[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "shellapi", "processthreadsapi", "handleapi", "synchapi", "winbase", "processenv"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"
incremental = false
strip = "symbols"
